--- a/inputs.css
+++ b/inputs.css
@@ -45,7 +45,7 @@
     border-radius: 5px;
     background-color: #e6b3b3;
     left: 50%;
-    top: 50%;
+    top: 450px;
     transform: translateX(-50%);
     transition: 0.2s linear;
 }
@@ -63,6 +63,6 @@
     justify-content: center;
     align-items: center;
     left: 50%;
-    top: 60%;
+    top: 500px;
     transform: translateX(-50%);
 }
