--- a/resistor.css
+++ b/resistor.css
@@ -1,8 +1,8 @@
 .resistor{
     display: flex;
     position: absolute;
+    top: 125px;
     left: 50%;
-    top: 20%;
     transform: translate(-50%);
     align-items: center;
 }
