--- a/responsive.css
+++ b/responsive.css
@@ -21,6 +21,9 @@
         width: 60px;
         height: 70px;
     }
+    .menu{
+        display: block;
+    }
     .block2{
         width: 190px;
         height: 50px;
