--- a/inputs.css
+++ b/inputs.css
@@ -38,7 +38,7 @@
     width: 110px;
 }
 .submit{
-    position: absolute;;
+    position: absolute;
     width: 100px;
     height: 30px;
     border: none;
